--- a/package.json
+++ b/package.json
@@ -1,13 +1,5 @@
-{
-  "name": "threadlock",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "vercel dev",
-    "build": "",
-    "start": ""
-  },
-  "dependencies": {
-    "stripe": "^12.0.0"
-  }
+"scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
 }
