--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^14.0.0",
+    "next": "^14.2.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "framer-motion": "^10.16.4",
-    "stripe": "^12.0.0",
-    "@supabase/supabase-js": "^2.39.3",
+    "@stripe/stripe-js": "^2.3.0",
+    "@supabase/supabase-js": "^2.45.0",
     "resend": "^1.0.0"
   },
   "devDependencies": {
