--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "framer-motion": "^10.16.4",
+    "stripe": "^14.0.0",
     "@stripe/stripe-js": "^2.3.0",
     "@supabase/supabase-js": "^2.45.0",
     "resend": "^1.0.0"
