--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threadlock",
-  "version": "3.2.1",
+  "version": "3.3.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^14.2.31",
+    "next": "14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "framer-motion": "^10.16.4",
@@ -18,8 +18,8 @@
     "resend": "^1.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.0"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
