--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "14.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.4",
-    "stripe": "^14.0.0",
-    "@stripe/stripe-js": "^2.3.0",
-    "@supabase/supabase-js": "^2.45.0",
-    "resend": "^1.0.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "framer-motion": "10.16.4",
+    "stripe": "^16.0.0",
+    "@stripe/stripe-js": "2.3.0",
+    "@supabase/supabase-js": "2.45.0",
+    "resend": "1.0.0",
+    "micro": "^10.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
