--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "2.3.0",
+    "@supabase/supabase-js": "2.45.0",
+    "framer-motion": "10.16.4",
+    "micro": "^10.0.1",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "framer-motion": "10.16.4",
-    "stripe": "^16.0.0",
-    "@stripe/stripe-js": "2.3.0",
-    "@supabase/supabase-js": "2.45.0",
     "resend": "1.0.0",
-    "micro": "^10.0.1"
+    "stripe": "^16.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
