--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "2.15.4",
     "resend": "1.0.0",
     "stripe": "^16.0.0"
   },
