Apply fixes from PRs #6-10: Cypress config, CI workflow, Firebase lazy-loading, env validation
Consolidated and applied all approved changes from open PRs to resolve deployment blockers:

**From PR #10 (tsconfig for Cypress):**
- Added tsconfig.json with ES2020 target for Cypress TypeScript compilation
- Configured proper types for cypress and node

**From PR #9 (Fix Cypress tsx loader error):**
- Pinned Cypress to 13.13.2 to avoid Node 20+ --loader tsx deprecation
- Upgraded CI workflow from Node 18 to Node 20
- Added e2e:spec script with cleared NODE_OPTIONS and CYPRESS_INSTALL_BINARY=0
- Updated package.json engines to require Node >=20

**From PR #8 (Lazy-load Firebase & env validation):**
- Converted next.config.js to next.config.mjs with VITE_* to NEXT_PUBLIC_* fallback mapping
- Created scripts/check-next-env.mjs for prebuild env validation
- Updated components/CTA.js and LeadMagnetForm.jsx to lazy-load Firebase with useEffect
- Added runtime Firebase initialization checks with graceful degradation
- Removed Vite-specific import.meta.env from src/lib/env.ts
- Added .env.example documentation

**From PR #7 (Cypress support files):**
- Created cypress/support/e2e.ts with Firebase error suppression for dummy credentials
- Created cypress/support/commands.ts for custom Cypress commands
- Updated .gitignore to exclude cypress/screenshots/, cypress/videos/, cypress/results/

**Additional fixes:**
- Fixed TypeScript errors in cypress/e2e/layout_consistency.cy.ts with proper type assertions
- Added webpack alias configuration in next.config.mjs for @ path resolution
- Copied @/lib/stripeEnv.js to lib/stripeEnv.js and updated imports to use relative paths
- Updated jsconfig.json with explicit path mappings

**Build Status:** ✅ Successful with dummy Firebase env vars
**Deployment:** Ready for Vercel/Netlify deployment with proper env configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
       
       - name: Install dependencies
@@ -69,7 +69,10 @@ jobs:
         run: npx wait-on http://localhost:3000 --timeout 60000
       
       - name: Run Cypress tests
-        run: npx cypress run --spec "cypress/e2e/layout_consistency.cy.ts"
+        env:
+          NODE_OPTIONS: ""
+          CYPRESS_INSTALL_BINARY: "0"
+        run: npm run e2e:spec
       
       - name: Upload Cypress screenshots on failure
         if: failure()
